# gpt-overleaf-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: gpt-ngrok.md
scripts/: __init__.py  check_env.py  compile_project.py  inspect_project.py  start_http_server.ps1
src/overleaf_agent/: __init__.py  context_retriever.py  edit_pipeline.py  edit_validator.py  insert_edit.py  latex_cleaner.py  latex_compile.py  log_parser.py  mcp_server.py  paper_parser.py  patcher.py  project_indexer.py  range_edit.py  shell.py
